test/spec_vectors/br_if/fail/module_3.wat
(module (func $type-false-f32 (block (f32.neg (br_if 0 (i32.const 0))))))